# gap

./: .dockerignore  .gitignore  AGENT_ORIENTATION.md  Cargo.toml  DEBUGGING_GUIDANCE.md  DONE.md  Dockerfile  Dockerfile.test-runner  IDEAS.md  INSTALL.md  KANBAN_BOARD.md  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh
.claude/: settings.json  settings.local.json
.github/workflows/: build-amd64.yml
acp/: Cargo.toml
acp-lib/: Cargo.toml
acp-lib/examples/: verify_cert.rs
acp-lib/src/: error.rs  http_utils.rs  lib.rs  plugin_matcher.rs  plugin_runtime.rs  proxy.rs  proxy_transforms.rs  registry.rs  storage.rs  tls.rs
acp-lib/tests/: README.md  bundled_plugins_test.rs  e2e_integration_test.rs  integration_test.rs  proxy_plugin_integration_test.rs  proxy_transform_integration_test.rs
acp-server/: Cargo.toml
acp-server/src/: api.rs  launchd.rs  main.rs
acp-server/tests/: api_tests.rs
acp/src/: auth.rs  client.rs  main.rs
acp/src/commands/: activity.rs  credentials.rs  init.rs  mod.rs  plugins.rs  status.rs  tokens.rs
docs/: RELEASING.md  handoff.md  horizontal-mode-postgres-spec.md  macos-distribution.md  namespace-mode-proposal.md  native-app-design.md
docs/homebrew-tap/: plan.md
docs/horizontal-mode/: handoff.md
docs/macos-improvements/: macos-gui-implementation-plan.md  macos-gui-plan.md  plan.md
docs/macos-keychain-auth/: plan.md
docs/macos-packaging/: plan.md
docs/qa/tools/: run-full-test-suite.sh
docs/reference/: architecture.md  gotchas.md  types.md
docs/registry-refactor/: plan.md
docs/rename-to-gap/: comprehensive-cleanup-task.md  final-cleanup-task.md  final-documentation-sweep-task.md
docs/smoke-tests/: ca-cert-export-at-boot.md  ca-cert-export.md  https-management-api.md  macos-dmg-build.md
docs/transparent-proxy/: proposal.md
gap/: Cargo.toml
gap-lib/: Cargo.toml
gap-lib/src/: database.rs  database_libsql.rs  database_postgres.rs  database_tests.rs  error.rs  http_utils.rs  key_provider.rs  keychain_impl.rs  lib.rs  paths.rs  plugin_matcher.rs  plugin_runtime.rs  proxy.rs  proxy_transforms.rs  registry.rs  scope_matcher.rs  storage.rs  tls.rs  types.rs
gap-lib/tests/: README.md  e2e_crypto_signing_test.rs  e2e_header_set_test.rs  e2e_http_permit_test.rs  e2e_integration_test.rs  e2e_proxy_full_test.rs  e2e_scoped_token_test.rs  integration_test.rs  proxy_plugin_integration_test.rs  proxy_tls_integration_test.rs  proxy_transform_integration_test.rs
gap-lib/tests/fixtures/: test_server_ca_cert.pem  test_server_ca_key.pem
gap-server/: Cargo.toml
gap-server/src/: api.rs  launchd.rs  main.rs  signing.rs
gap/src/: auth.rs  client.rs  main.rs  signing.rs
gap/src/commands/: activity.rs  credentials.rs  init.rs  management_log.rs  mod.rs  plugins.rs  tokens.rs
macos-app/: build-dmg.sh  setup-app-provisioning.sh  sign-and-package.sh  test-dmg-staging.sh  test-server-check.swift  test-url-encoding.swift  verify-icons.sh
macos-app/GAP-App/Sources/: AppState.swift  GAPApp.swift  ServerManager.swift
macos-gui/: README.md  XCODE_SETUP.md
macos-gui/.build/: info.plist
macos-gui/.build/ModuleCache.noindex/: Accessibility-3JEN9BLP5FY7G04RAJLVLMT7L.pcm  ApplicationServices-9INQM0JV15KW7Y9F20I1MRG1P.pcm  CFNetwork-F437AADDO5GJO7EZU70KGMO3J.pcm  CUPS-7K983WVDE166GPXX27ARQGEMH.pcm  ColorSync-EMT089NG1UGBK94AISPB26CGG.pcm  CoreData-3LXZC77UT2SRGSG7MJJNLWYME.pcm  CoreFoundation-7VK0KJL5RYJ7A8ZALULK0BTBG.pcm  CoreGraphics-6DH5G5ROZUWJFTQN2GYYF2AJZ.pcm  CoreImage-6WQE1NMYYASCPKAHCU3D9TNT3.pcm  CoreText-630NKH8AMD6QZGWTNZKVZYLCZ.pcm  CoreTransferable-A2Q7E50ZSQ1X7A3CESBVUWK4X.pcm  CoreVideo-59U2J5EEKPPSH6HRFSOVBG9LG.pcm  DataDetection-BQZ64UA98GHPKO96J0FI7PS8F.pcm  DiskArbitration-6LDE9IPYPI1RZJFXNQEA0SBZ0.pcm  Dispatch-3MIXANNBE6L5I48UYKYHBYK3K.pcm  IOSurface-315DLXAUJ7EQ3OM4KXDFXT0SG.pcm  ImageIO-8YUWWQEOV0ACJW7ZQU38W57XR.pcm  LocalAuthentication-D8CZZB60UYB9406HJONMNO6H6.pcm  MachO-48Y8Y7DGO7W1IATJAW7OFNU9T.pcm  Metal-UOM1R86GSX5F2BBCXR8Y82ZT.pcm  OSLog-193VQKZ4080VTNTL27T6VQGIW.pcm  ObjectiveC-B28RPRSTC8XD2NUXG9WNN0B0.pcm  OpenGL-7XNZQNWKASTIMQZVJLKGESZH2.pcm  QuartzCore-EO02LF0G2K7Z6PNILREZIVP2S.pcm  Security-7EI0J79KIPWDIHXQNRNH1Z4H5.pcm  Session.modulevalidation  Spatial-82YMK1AGRSENN0M9FONPEB08Y.pcm  SwiftUI-8IT670IOL15XJ622DXK1B38KU.pcm  SwiftUICore-5C8DTUKMWWDIKY2ECC99TOFOK.pcm  Symbols-6ENIZDVP39IXMYMUZF9OWR1G0.pcm  UniformTypeIdentifiers-D7M8QWUSB7SLXEX7OGIGF8FES.pcm  XPC-4SQ7TD8RPS7UVZLT4ARMJGGGD.pcm  _Builtin_intrinsics-9R1HA6PKZM6UEGW1LAW4YPNO1.pcm  _Builtin_inttypes-5BRZB2SZR1QX7D7AS5ICU26V8.pcm  _Builtin_limits-DZZ7U35YS5XHAZQEQHADS01HN.pcm  _Builtin_stdatomic-A5QEKBHGFQ0S1CYTHRL24BHOV.pcm  _Builtin_stdint-8XZKLOW1HLB03HURDUG2X11WE.pcm  _Builtin_tgmath-99BEINOFOAYVVI16GI1LYPIBE.pcm  _DarwinFoundation1-1W8ACBMKFTVNJNMPC5ILNFWRC.pcm  _DarwinFoundation2-1AA80FPFM56URCS9HI6E018NY.pcm  (+9 more)
macos-gui/ACP/: ACPApp.swift  AppState.swift  Info.plist
macos-gui/ACP.xcodeproj/: project.pbxproj
macos-gui/ACP/API/: .gitkeep  ACPClient.swift  Models.swift  PasswordHash.swift
macos-gui/ACP/Views/: .gitkeep  (+3 more)
macos-gui/ACPTests/: ModelsTests.swift  PasswordHashTests.swift
management-go/: Dockerfile.test  activity.go  client.go  credentials.go  errors.go  go.mod  header_sets.go  integration_test.go  management_log.go  models.go  namespace_test.go  namespaces.go  plugins.go  signing.go  signing_test.go  sse.go  sse_test.go  status.go  tokens.go
plans/: mellow-waddling-charm.md
plugins/: aws-s3.js  exa.js  test-api.js
scripts/: macos-notarize.sh  macos-sign.sh  test-macos-notarize.sh
smoke-tests/: cli.md  e2e-proxy.md  generate-test-ca.sh  installation.md  run-e2e-proxy.sh  smoke-test.sh  test-docker-horizontal.sh  test-docker-integration.sh  test-docker-nobootstrap.sh  test-docker-signing.sh  test-docker.sh  test-https-proxy.sh  test-init.exp  test-install.sh
smoke-tests/fixtures/: signing-key-pub.pem  signing-key.pem  test-ca-cert.b64  test-ca-key.b64  test-ca.crt  test-ca.key  test-encryption.key  test-intermediate.crt  test-intermediate.key  test-root-ca.crt  test-root-ca.key  wrong-signing-key.pem
(+70 files in other folders)
