[package]
name = "acp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "acp-server"
path = "src/main.rs"

[dependencies]
acp-lib.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
sha2 = "0.10"
chrono.workspace = true
git2.workspace = true
tempfile.workspace = true
dirs.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.13"
hyper = "1.5"
serial_test = "3.1"
