[package]
name = "acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "acp"
path = "src/main.rs"

[dependencies]
acp-lib.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword = "7.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"
