[package]
name = "gap-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
dirs.workspace = true
boa_engine = "0.19"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
rcgen.workspace = true
time.workspace = true
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2.0"
rustls-native-certs = "0.8"
webpki-roots = "0.26"
httparse = "1.9"
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework-sys = { version = "2.15", features = ["OSX_10_15"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.13"
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
