[package]
name = "gap-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gap-server"
path = "src/main.rs"

[dependencies]
gap-lib.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
sha2 = "0.10"
chrono.workspace = true
git2.workspace = true
tempfile.workspace = true
dirs.workspace = true
tracing-appender.workspace = true
rand.workspace = true
urlencoding = "2.1.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
base64 = "0.22"
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.13"
hyper = "1.5"
serial_test = "3.1"
http-body-util = "0.1"
