[package]
name = "gap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gap"
path = "src/main.rs"

[dependencies]
gap-lib.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rpassword = "7.3"
sha2 = "0.10"
hex = "0.4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding = "2.1.3"
ring = "0.17"
base64 = "0.22"
